# metropolitan

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml  tox.ini
metropolitan/: __about__.py
metropolitan/configuration/: containers.py
tests/: test_metadata.py
