[tool.poetry]
name = "metropolitan"
version = "0.0.0"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "Media first, JS optional, static site generator for personal blogs"
repository = "https://github.com/enpaul/metropolitan/"
packages = [
  {include = "metropolitan"},
  {include = "tests/*.py", format = "sdist"}
]
include = [
  "metropolitan/py.typed"
]
keywords = ["static", "site-generator", "web", "blog", "static-site"]
readme = "README.md"
classifiers = [
]

[tool.poetry.dependencies]
python = "^3.6.1"
marshmallow = "^3.10.0"
"ruamel.yaml" = "^0.16.12"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = {version = "^20.8b1", allow-prereleases = true}
blacken-docs = "^1.8.0"
ipython = { version = "^7.18.1", python = "^3.7" }
mypy = "^0.782"
pre-commit = "^2.7.1"
pre-commit-hooks = "^3.3.0"
pylint = "^2.4.4"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
reorder-python-imports = "^2.3.5"
safety = "^1.9.0"
toml = "^0.10.1"
tox = "^3.20.0"
tox-poetry-installer = { version = "^0.6.4", extras = ["poetry"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
